@startuml
title IntelliCore Telemetry - Layer 1 OOP Model

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype ortho
skinparam defaultFontName Arial
hide empty members

package "gem5 integration" #E8F4FD {
  abstract class BaseMemProbe <<gem5>> {
    # handleRequest(pktInfo: PacketInfo): void
  }

  class Gem5TelemetryProbe {
    - registry: ThreadTelemetryRegistry&
    + handleAccess(arg: CacheAccessProbeArg): void
    + handleReplacement(arg: CacheReplacementProbeArg): void
    + recordEviction(event: EvictionEvent, threadId: ThreadId, correlatedRecordCounter: uint32_t): bool
    + recordMigration(threadId: ThreadId, newCoreId: CoreId): void
  }

  BaseMemProbe <|-- Gem5TelemetryProbe
}

package "Layer 1 - Data Extraction" #F3FAF3 {
  enum RecordKind {
    MemoryTrace = 0
    EvictionSnapshot = 1
  }

  enum MemoryEventKind {
    Read
    Write
    Migration
  }

  class TelemetryRecord <<value object; fixed-width target: 16 B>> {
    + metadata: uint8_t
    + recordCounter: uint32_t
    + encode(): byte[16]
  }

  note right of TelemetryRecord
    metadata: uint8_t bit layout
    [0]    kind: 1 bit
    [1]    isHit: 1 bit
    [2]    isEviction: 1 bit
    [5:3]  evictedWayIndex: 3 bits
    [7:6]  reserved: 2 bits
  end note

  struct MemoryTracePayload <<value object>> {
    + threadId: uint8_t
    + opType: uint8_t
    + address: uint64_t
    + coherenceMap: uint8_t
  }

  struct EvictionSnapshotPayload <<value object>> {
    + uint8_t fields[8]
  }

  note right of EvictionSnapshotPayload
    fields[0..7] map directly to L1D ways 0..7
    each lineData: uint8_t bit layout
    [1:0]  saturationCounter: 2 bits
    [4:2]  lruRank: 3 bits
    [5]    dirtyBit: 1 bit
    [6]    invalidBit: 1 bit
    [7]    reserved: 1 bit (always 0)
  end note

  class ThreadBuffer <<SPSC>> {
    - slots: TelemetryRecord[capacity]
    - head: atomic<uint32_t> <<consumer-owned>>
    - tail: atomic<uint32_t> <<producer-owned>>
    - droppedTraces: atomic<uint64_t>
    + capacity: uint32_t = 65536
    + tryPush(record: TelemetryRecord): bool
    + tryPop(): optional<TelemetryRecord>
    + size(): uint32_t
    + freeSlots(): uint32_t
    + droppedCount(): uint64_t
  }

  class ThreadTelemetryState {
    + threadId: ThreadId
    + currentCoreId: CoreId
    - buffer: ThreadBuffer
    + append(record: TelemetryRecord): bool
    + updateCore(newCoreId: CoreId): void
  }

  class ThreadTelemetryRegistry {
    - states: Map<ThreadId, ThreadTelemetryState>
    + stateFor(threadId: ThreadId): ThreadTelemetryState&
    + migrate(threadId: ThreadId, newCoreId: CoreId): void
  }

  class TelemetryRecordFactory {
    {static} - recordCounter: atomic<uint64_t>
    + buildTraceRecord(pktInfo: PacketInfo, state: ThreadTelemetryState): TelemetryRecord
    + buildEvictionRecord(event: EvictionEvent, correlatedRecordCounter: uint32_t): TelemetryRecord
    + buildMigrationRecord(state: ThreadTelemetryState, newCoreId: CoreId): TelemetryRecord
    {static} - allocateRecordId(): uint64_t
  }
}

package "Layer 2 boundary" #F4F4F4 {
  class TokenAwarePoller <<Layer 2>> {
    + drain(buffer: ThreadBuffer, budget: uint32_t): TraceBatch
  }
}

Gem5TelemetryProbe --> ThreadTelemetryRegistry : finds state
Gem5TelemetryProbe --> TelemetryRecordFactory : constructs record
TelemetryRecordFactory --> TelemetryRecord
ThreadTelemetryRegistry "1" *-- "1..* states" ThreadTelemetryState
ThreadTelemetryState "1 " *-- "1" ThreadBuffer : owns
ThreadTelemetryState --> TelemetryRecord : appends
ThreadBuffer "1\n" o-- "0..capacity " TelemetryRecord : stores
TokenAwarePoller ..> ThreadBuffer : consumer drains

TelemetryRecord --> RecordKind
TelemetryRecord ..> MemoryTracePayload : payload when kind = 0
TelemetryRecord ..> EvictionSnapshotPayload : payload when kind = 1
MemoryTracePayload --> MemoryEventKind

note right of TelemetryRecordFactory
  New traces and migrations receive a globally
  allocated recordCounter. An eviction snapshot
  reuses its causative memory trace's value, making
  recordCounter the pair's correlation identifier.
end note

note bottom of Gem5TelemetryProbe
  L1D demand miss: emit trace, then attach its ID
  to Request. The MSHR/fill path preserves Request.
  A true pre-invalidation Replacement event captures
  all eight ways and emits the correlated snapshot.
end note

note bottom of ThreadBuffer
  Producer: gem5 cache/probe hook
  Consumer: Layer 2 poller
  Full buffer: drop record, increment droppedTraces,
  and return without blocking.
end note

note bottom of ThreadTelemetryState
  Thread migration retains this thread-owned buffer.
  Existing records remain valid; future records use
  the updated currentCoreId.
end note
@enduml
